resorting of the costheta according to the cos theta and phi of the photons

--- a/b1_map_CH9.ipynb
+++ b/b1_map_CH9.ipynb
@@ -92,6 +92,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def sorting_array(inarray, cosphi):\n",
+    "    cosn=np.array([col[0] for col in cosphi]); #list\n",
+    "    phin=np.array([col[1] for col in cosphi]); #list\n",
+    "    if inarray.ndim>2:\n",
+    "        data = inarray.reshape(72, 288).T\n",
+    "        df = pd.DataFrame(\n",
+    "            data=data,\n",
+    "            index=pd.MultiIndex.from_product([phiM, cosM],names=[\"phi\",\"cos(theta)\"]),\n",
+    "            columns=['item {}'.format(i) for i in range(72)])\n",
+    "            \n",
+    "    else:\n",
+    "        cosbin = inarray.shape[1]        \n",
+    "        data = inarray.T\n",
+    "        df = pd.DataFrame(\n",
+    "            data=data,\n",
+    "            index=np.linspace(-1,1,18),\n",
+    "            columns=['item {}'.format(i) for i in range(72)])\n",
+    "    \n",
+    "    #sorting according to the cosphi array\n",
+    "    df = df.T\n",
+    "    df.set_index(cosn, \"cos_light\", append=True, inplace=True)\n",
+    "    df.set_index(phin, \"phi_light\", append=True, inplace=True)\n",
+    "    df.sort_index(level=1, inplace=True)\n",
+    "    df.reset_index(level=1, drop=True, inplace=True) # removes cos_light\n",
+    "    df.reset_index(level=1, drop=True, inplace=True) # removes phi\n",
+    "    df=df.T\n",
+    "\n",
+    "    if inarray.ndim>2:\n",
+    "        #fast approach with numpy\n",
+    "        MFPAD_temp = df.values.reshape(24, 12, 72)\n",
+    "        #Then call transpose to rearrange the order of the axes:\n",
+    "        outarray=MFPAD_temp.transpose(2, 0, 1)\n",
+    "    else:\n",
+    "        outarray=df.values.reshape(72, cosbin)\n",
+    "        \n",
+    "    return outarray\n",
+    "\n",
     "def cosphi_func(key, cosphi):\n",
     "    ctheta_nc = float((str(key).split(\"costheta_\")[1]).split(\"_phi\")[0])\n",
     "    phi_nc = float((str(key).split(\"phi_\")[1]).split(\";\")[0])\n",
@@ -241,8 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.array(ctheta_RCR).shape)\n",
-    "ctheta_RCR"
+    "print(np.array(ctheta_RCR).shape,ctheta_RCR)\n",
+    "print(np.array(ctheta_RCL).shape,ctheta_RCL)"
    ]
   },
   {
@@ -253,8 +290,25 @@
    },
    "outputs": [],
    "source": [
-    "print(ctheta_RCR[0].shape)\n",
-    "ctheta_RCR[0]"
+    "print(ctheta_RCR[0].shape,ctheta_RCR[0])\n",
+    "print(ctheta_RCL[0].shape,ctheta_RCL[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ORDER THE CTHETA ACCORDING TO THE COSTHETA PIHI OF LIGHT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctheta_RCR=sorting_array(ctheta_RCR,cosphi)\n",
+    "ctheta_RCL=sorting_array(ctheta_RCL,cosphi)"
    ]
   },
   {
@@ -589,6 +643,15 @@
     "test=go_cos.tolist()\n",
     "print(test[0], \"\\n\")\n",
     "print(type(cosphi[:,0]), cosphi[:,0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(param_matrix[0,:,0])"
    ]
   },
   {
