--- a/b1_map_CH9.ipynb
+++ b/b1_map_CH9.ipynb
@@ -92,11 +92,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sorting_array(inarray, cosphi):\n",
+    "def sorting_array(inarray, cosphi, a):\n",
+    "    \"\"\"\n",
+    "    a is the level according to which values have to be sorted: 1 = cos_light, 2 = phi_light\n",
+    "    Function to sort the input array according to the labels attached from LMF2ROOT. The lables are stored in cosphi during the loaing.\n",
+    "    To load sorting the 72 items according to cos(theta) use level = 1, according to phi level = 2. The first level is a tring, thereofere\n",
+    "    is not possible to sort according to it.\n",
+    "    NOTE: for experimental data the default order is according to phi, civecersa for the theoretical MFPADs.\n",
+    "    \"\"\"\n",
     "    cosn=np.array([col[0] for col in cosphi]); #list\n",
     "    phin=np.array([col[1] for col in cosphi]); #list\n",
     "    if inarray.ndim>2:\n",
-    "        data = inarray.reshape(72, 288).T\n",
+    "        data = inarray.reshape(72, inarray.shape[1]*inarray.shape[2]).T\n",
     "        df = pd.DataFrame(\n",
     "            data=data,\n",
     "            index=pd.MultiIndex.from_product([phiM, cosM],names=[\"phi\",\"cos(theta)\"]),\n",
@@ -107,25 +114,32 @@
     "        data = inarray.T\n",
     "        df = pd.DataFrame(\n",
     "            data=data,\n",
-    "            index=np.linspace(-1,1,18),\n",
+    "            index=np.linspace(-1,1,inarray.shape[1]),\n",
     "            columns=['item {}'.format(i) for i in range(72)])\n",
     "    \n",
     "    #sorting according to the cosphi array\n",
-    "    df = df.T\n",
-    "    df.set_index(cosn, \"cos_light\", append=True, inplace=True)\n",
-    "    df.set_index(phin, \"phi_light\", append=True, inplace=True)\n",
-    "    df.sort_index(level=1, inplace=True)\n",
-    "    df.reset_index(level=1, drop=True, inplace=True) # removes cos_light\n",
-    "    df.reset_index(level=1, drop=True, inplace=True) # removes phi\n",
-    "    df=df.T\n",
+    "    df1=df.T\n",
+    "    df1[\"cos_light\"]=cosn\n",
+    "    df1[\"phi_light\"]=phin\n",
+    "    df1.set_index(\"cos_light\", append=True, inplace=True) #level=1\n",
+    "    df1.set_index(\"phi_light\", append=True, inplace=True) #level=2\n",
+    "    \n",
+    "    #here it transforms the DataBAse into a series in order to sort correctly the cos(theta) column too\n",
+    "    dfnew=df1.stack()\n",
+    "    #level=2 is the standard for experiment, level=1 for theory\n",
+    "    #kind=\"mergesort\" the concept of stable sorting algorithm\n",
+    "    dfnew.sort_index(level=a, inplace=True, kind=\"mergesort\")\n",
+    "    dfnew.reset_index(level=1, drop=True, inplace=True) # removes cos_light\n",
+    "    dfnew.reset_index(level=1, drop=True, inplace=True) # removes phi\n",
+    "    df2=dfnew.T\n",
     "\n",
     "    if inarray.ndim>2:\n",
     "        #fast approach with numpy\n",
-    "        MFPAD_temp = df.values.reshape(24, 12, 72)\n",
+    "        MFPAD_temp = df2.values.reshape(inarray.shape[1], inarray.shape[2], 72)\n",
     "        #Then call transpose to rearrange the order of the axes:\n",
     "        outarray=MFPAD_temp.transpose(2, 0, 1)\n",
     "    else:\n",
-    "        outarray=df.values.reshape(72, cosbin)\n",
+    "        outarray=df2.values.reshape(72, inarray.shape[1])\n",
     "        \n",
     "    return outarray\n",
     "\n",
@@ -295,39 +309,60 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ORDER THE CTHETA ACCORDING TO THE COSTHETA PIHI OF LIGHT"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ctheta_RCR=sorting_array(ctheta_RCR,cosphi)\n",
-    "ctheta_RCL=sorting_array(ctheta_RCL,cosphi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cPECD_norm =  np.divide(np.subtract(ctheta_RCR/ctheta_RCR.sum(axis=1)[:,np.newaxis],ctheta_RCL/ctheta_RCL.sum(axis=1)[:,np.newaxis]),np.add(ctheta_RCR/ctheta_RCR.sum(axis=1)[:,np.newaxis],ctheta_RCL/ctheta_RCL.sum(axis=1)[:,np.newaxis]))\n",
+    "ctheta_RCR_new=sorting_array(ctheta_RCR,cosphi,1)\n",
+    "ctheta_RCL_new=sorting_array(ctheta_RCL,cosphi,1)\n",
     "\n",
-    "cPECD =  np.divide(np.subtract(ctheta_RCR,ctheta_RCL),np.add(ctheta_RCR,ctheta_RCL))\n",
+    "ctheta_RCR_phi=sorting_array(ctheta_RCR,cosphi,2)\n",
+    "ctheta_RCL_phi=sorting_array(ctheta_RCL,cosphi,2)\n",
+    "\n",
+    "print(ctheta_RCR==ctheta_RCR_phi)\n",
+    "print(ctheta_RCL==ctheta_RCL_phi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test of similarity\n",
+    "\n",
+    "cPECD_norm_std =  np.divide(np.subtract(ctheta_RCR/ctheta_RCR.sum(axis=1)[:,np.newaxis],ctheta_RCL/ctheta_RCL.sum(axis=1)[:,np.newaxis]),np.add(ctheta_RCR/ctheta_RCR.sum(axis=1)[:,np.newaxis],ctheta_RCL/ctheta_RCL.sum(axis=1)[:,np.newaxis]))\n",
+    "\n",
+    "cPECD_std =  np.divide(np.subtract(ctheta_RCR,ctheta_RCL),np.add(ctheta_RCR,ctheta_RCL))\n",
+    "\n",
+    "errPECD_std = np.sqrt(1/(ctheta_RCR+ctheta_RCL))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cPECD_norm =  np.divide(np.subtract(ctheta_RCR_new/ctheta_RCR_new.sum(axis=1)[:,np.newaxis],ctheta_RCL_new/ctheta_RCL_new.sum(axis=1)[:,np.newaxis]),np.add(ctheta_RCR_new/ctheta_RCR_new.sum(axis=1)[:,np.newaxis],ctheta_RCL_new/ctheta_RCL_new.sum(axis=1)[:,np.newaxis]))\n",
+    "\n",
+    "cPECD =  np.divide(np.subtract(ctheta_RCR_new,ctheta_RCL_new),np.add(ctheta_RCR_new,ctheta_RCL_new))\n",
     "\n",
     "# from the statistical book var = sqrt(1/Ntot)\n",
     "\n",
-    "errPECD = np.sqrt(1/(ctheta_RCR+ctheta_RCL))\n",
+    "errPECD = np.sqrt(1/(ctheta_RCR_new+ctheta_RCL_new))\n",
     "\n",
     "print(cPECD.shape)\n",
     "print(cPECD_norm.shape)\n",
-    "print(cPECD_norm[0].shape)"
+    "print(cPECD_norm[0].shape)\n",
+    "#TRUE if level = 2\n",
+    "print(ctheta_RCL==ctheta_RCL_new)\n",
+    "diff1=ctheta_RCL-ctheta_RCL_new\n",
+    "plt.plot(diff1[0])\n",
+    "print(cPECD_norm_std==cPECD_norm)\n",
+    "diff=cPECD_norm_std-cPECD_norm\n",
+    "# plt.plot(diff[0])"
    ]
   },
   {
@@ -552,7 +587,7 @@
    "source": [
     "import pprint\n",
     "pprint.pprint(param_matrix)\n",
-    "len(m.parameters)"
+    "print(len(m.parameters))"
    ]
   },
   {
@@ -574,7 +609,8 @@
     "param_matrix=np.array(param_matrix) #numpy tranformation!!!\n",
     "b1 = param_matrix[0,:,0]\n",
     "b2 = param_matrix[1,:,0]\n",
-    "print(b1[0],b1.shape, b2[0], b2.shape)"
+    "print(b1[0],b1.shape, b2[0], b2.shape)\n",
+    "plt.plot(param_matrix[0,:,0])"
    ]
   },
   {
@@ -643,15 +679,6 @@
     "test=go_cos.tolist()\n",
     "print(test[0], \"\\n\")\n",
     "print(type(cosphi[:,0]), cosphi[:,0].shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(param_matrix[0,:,0])"
    ]
   },
   {
