working with the right sorting procedure. to be cleaned

--- a/b1_map_CH9.ipynb
+++ b/b1_map_CH9.ipynb
@@ -106,6 +106,7 @@
     "        data = inarray.reshape(72, inarray.shape[1]*inarray.shape[2]).T\n",
     "        df = pd.DataFrame(\n",
     "            data=data,\n",
+    "            #NOTE: phiM and cosM should be passed into the function\n",
     "            index=pd.MultiIndex.from_product([phiM, cosM],names=[\"phi\",\"cos(theta)\"]),\n",
     "            columns=['item {}'.format(i) for i in range(72)])\n",
     "            \n",
@@ -116,30 +117,28 @@
     "            data=data,\n",
     "            index=np.linspace(-1,1,inarray.shape[1]),\n",
     "            columns=['item {}'.format(i) for i in range(72)])\n",
-    "    \n",
-    "    #sorting according to the cosphi array\n",
+    "        \n",
     "    df1=df.T\n",
     "    df1[\"cos_light\"]=cosn\n",
     "    df1[\"phi_light\"]=phin\n",
     "    df1.set_index(\"cos_light\", append=True, inplace=True) #level=1\n",
     "    df1.set_index(\"phi_light\", append=True, inplace=True) #level=2\n",
     "    \n",
-    "    #here it transforms the DataBAse into a series in order to sort correctly the cos(theta) column too\n",
-    "    dfnew=df1.stack()\n",
+    "    if inarray.ndim<=2:\n",
+    "        #here it transforms the DataBAse into a series in order to sort correctly the cos(theta) column too\n",
+    "        dfnew=df1.stack()\n",
+    "    \n",
     "    #level=2 is the standard for experiment, level=1 for theory\n",
     "    #kind=\"mergesort\" the concept of stable sorting algorithm\n",
     "    dfnew.sort_index(level=a, inplace=True, kind=\"mergesort\")\n",
     "    dfnew.reset_index(level=1, drop=True, inplace=True) # removes cos_light\n",
     "    dfnew.reset_index(level=1, drop=True, inplace=True) # removes phi\n",
-    "    df2=dfnew.T\n",
-    "\n",
+    "    \n",
     "    if inarray.ndim>2:\n",
-    "        #fast approach with numpy\n",
-    "        MFPAD_temp = df2.values.reshape(inarray.shape[1], inarray.shape[2], 72)\n",
-    "        #Then call transpose to rearrange the order of the axes:\n",
-    "        outarray=MFPAD_temp.transpose(2, 0, 1)\n",
+    "        #fast approach with numpy with transpose to rearrange the order of the axes:\n",
+    "        outarray=(dfnew.T)values.reshape(inarray.shape[1],inarray.shape[2],72).transpose(2, 0, 1)\n",
     "    else:\n",
-    "        outarray=df2.values.reshape(72, inarray.shape[1])\n",
+    "        outarray=dfnew.values.reshape(72, inarray.shape[1])\n",
     "        \n",
     "    return outarray\n",
     "\n",
