fixed the sorting of data for phi and cos light. plotting b1 maps and MFPADs for cos sorting

--- a/72_2D_MFPADs_theory.ipynb
+++ b/72_2D_MFPADs_theory.ipynb
@@ -96,6 +96,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def sorting_array(inarray, cosphi, a):\n",
+    "    \"\"\"\n",
+    "    a is the level according to which values have to be sorted: 1 = cos_light, 2 = phi_light\n",
+    "    Function to sort the input array according to the labels attached from LMF2ROOT. The lables are stored in cosphi during the loaing.\n",
+    "    To load sorting the 72 items according to cos(theta) use level = 1, according to phi level = 2. The first level is a tring, thereofere\n",
+    "    is not possible to sort according to it.\n",
+    "    NOTE: for experimental data the default order is according to phi, civecersa for the theoretical MFPADs.\n",
+    "    \"\"\"\n",
+    "    cosn=np.array([col[0] for col in cosphi]); #list\n",
+    "    phin=np.array([col[1] for col in cosphi]); #list\n",
+    "    if inarray.ndim>2:\n",
+    "        data = inarray.reshape(72, inarray.shape[1]*inarray.shape[2]).T\n",
+    "        df = pd.DataFrame(\n",
+    "            data=data,\n",
+    "            #NOTE: phiM and cosM should be passed into the function\n",
+    "            index=pd.MultiIndex.from_product([phiM, cosM],names=[\"phi\",\"cos(theta)\"]),\n",
+    "            columns=['item {}'.format(i) for i in range(72)])\n",
+    "\n",
+    "    else:\n",
+    "        cosbin = inarray.shape[1]\n",
+    "        data = inarray.T\n",
+    "        df = pd.DataFrame(\n",
+    "            data=data,\n",
+    "            index=np.linspace(-1,1,inarray.shape[1]),\n",
+    "            columns=['item {}'.format(i) for i in range(72)])\n",
+    "\n",
+    "    df1=df.T\n",
+    "    df1[\"cos_light\"]=cosn\n",
+    "    df1[\"phi_light\"]=phin\n",
+    "    df1.set_index(\"cos_light\", append=True, inplace=True) #level=1\n",
+    "    df1.set_index(\"phi_light\", append=True, inplace=True) #level=2\n",
+    "\n",
+    "    if inarray.ndim>2:\n",
+    "        dfnew=df1\n",
+    "    else:\n",
+    "        #here it transforms the DataBAse into a series in order to sort correctly the cos(theta) column too\n",
+    "        dfnew=df1.stack()\n",
+    "\n",
+    "    #level=2 is the standard for experiment, level=1 for theory\n",
+    "    #kind=\"mergesort\" the concept of stable sorting algorithm\n",
+    "    dfnew.sort_index(level=a, inplace=True, kind=\"mergesort\")\n",
+    "    dfnew.reset_index(level=1, drop=True, inplace=True) # removes cos_light\n",
+    "    dfnew.reset_index(level=1, drop=True, inplace=True) # removes phi\n",
+    "\n",
+    "    if inarray.ndim>2:\n",
+    "        #fast approach with numpy with transpose to rearrange the order of the axes:\n",
+    "        outarray=(dfnew.T).values.reshape(inarray.shape[1],inarray.shape[2],72).transpose(2, 0, 1)\n",
+    "    else:\n",
+    "        outarray=dfnew.values.reshape(72, inarray.shape[1])\n",
+    "\n",
+    "    return outarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# plt.imshow(z_matrix)\n",
     "plt.imshow(counts_matrix.T,extent=[phi[0],phi[-1],ctheta[0],ctheta[-1]], aspect=180)\n",
     "ax = plt.axes()\n",
@@ -177,6 +236,8 @@
     "# all the 72 plots\n",
     "# the theoretical MFPAD has the form 1_1 ... 1_12, 2_1 ... 2_12 therefore it is ok the (6,12) subplot\n",
     "# 6 levels of cos(theta) (y), 12 levels of phi (x)\n",
+    "\n",
+    "#NOTE: the following phi and ctheta are not unique: len=20000\n",
     "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].to_numpy() # phi\n",
     "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].to_numpy() # cos(theta)\n",
     "\n",
@@ -239,7 +300,6 @@
    "source": [
     "# all the 72 plots: no borders & sharing axis\n",
     "\n",
-    "\n",
     "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].to_numpy() # phi\n",
     "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].to_numpy() # cos(theta)\n",
     "\n",
@@ -264,7 +324,7 @@
    },
    "outputs": [],
    "source": [
-    "from numpy.core.defchararray import multiply\r\n",
+    "from numpy.core.defchararray import multiply\r",
     "\r\n",
     "\r\n",
     "counts_matrixS=[]\r\n",
@@ -524,6 +584,169 @@
     "    margin=dict(l=0,r=0,b=25,t=25)\r\n",
     "    )\r\n",
     "\r\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# not the best defintion, but there are enough points\n",
+    "phiM = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].unique() # phi\n",
+    "cosM = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].unique() # cos(theta)\n",
+    "\n",
+    "# phiM=(phi[1:] + phi[:-1])/2\n",
+    "# cosM=(ctheta[1:] + ctheta[:-1])/2\n",
+    "\n",
+    "print(phiM.shape,cosM.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert the counts into a 2D np array and sort\n",
+    "\n",
+    "counts_matrixS_std=[]\n",
+    "counts_matrixS_phi=[]\n",
+    "counts_matrixS_cos=[]\n",
+    "counts_matrixR_phi=[]\n",
+    "counts_matrixR_cos=[]\n",
+    "\n",
+    "#respect to cs is the standard calculation\n",
+    "cos_projthS_phi=[]\n",
+    "phi_projthS_phi=[]\n",
+    "\n",
+    "cos_projthR_phi=[]\n",
+    "phi_projthR_phi=[]\n",
+    "\n",
+    "for filename,group,i in zip(frame_srt,frame_srt,range(72)):\n",
+    "    counts_matrixS_std.append(group[1][\"value\"].to_numpy().reshape(200,100))\n",
+    "    \n",
+    "counts_matrixS_std=np.array(counts_matrixS_std)\n",
+    "counts_matrixS_phi=sorting_array(counts_matrixS_std, cosphi_th, 2)\n",
+    "counts_matrixS_cos=sorting_array(counts_matrixS_std, cosphi_th, 1)\n",
+    "\n",
+    "for j,el in enumerate(counts_matrixS_std):\n",
+    "    #projection for S enantiomer \n",
+    "    cos_projthS_phi.append(counts_matrixS_phi[j].sum(axis=0))\n",
+    "    phi_projthS_phi.append(counts_matrixS_phi[j].sum(axis=1))\n",
+    "\n",
+    "    #flipping for R enantiomer\n",
+    "    tempcos_phi=np.flip(counts_matrixS_phi[j], axis=0)\n",
+    "    tempcos_cos=np.flip(counts_matrixS_cos[j], axis=0)\n",
+    "    counts_matrixR_phi.append(np.flip(tempcos_phi, axis=1))\n",
+    "    counts_matrixR_cos.append(np.flip(tempcos_phi, axis=1))\n",
+    "    #projection for R enantiomer \n",
+    "    cos_projthR_phi.append(counts_matrixR_phi[j].sum(axis=0))\n",
+    "    phi_projthR_phi.append(counts_matrixR_phi[j].sum(axis=1))\n",
+    "\n",
+    "\n",
+    "#projections\n",
+    "cos_projthS_phi=np.array(cos_projthS_phi)\n",
+    "phi_projthS_phi=np.array(phi_projthS_phi)\n",
+    "cos_projthR_phi=np.array(cos_projthR_phi)\n",
+    "phi_projthR_phi=np.array(phi_projthR_phi)\n",
+    "\n",
+    "counts_matrixR_phi=np.array(counts_matrixR_phi)\n",
+    "counts_matrixR_cos=np.array(counts_matrixR_cos)\n",
+    "\n",
+    "print(np.array(counts_matrixS_phi).shape)\n",
+    "print(np.array(counts_matrixR_phi).shape)\n",
+    "print(np.array(counts_matrixR_cos).shape)\n",
+    "print(np.array(cos_projthS_phi).shape)\n",
+    "print(np.array(cos_projthR_phi).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all the 72 plots FOR R ENANTIOMER NOT SORTED: to be compare directly with experimental data\n",
+    "fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "# fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
+    "\n",
+    "for filename,group,i,ax in zip(frame_srt,frame_srt,range(72),axes.flatten()) :\n",
+    "    counts_str = group[1][\"value\"].to_numpy()\n",
+    "    ax.contourf(phi.reshape(200,100),ctheta.reshape(200,100),counts_matrixR_cos[i].reshape(200,100), levels=20, vmin=0.0001)\n",
+    "    ax.text(0, 0, cosphi_th[i], ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    \n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cPECD_phi =  np.divide(np.subtract(cos_projthR_phi,cos_projthS_phi),np.add(cos_projthR_phi,cos_projthS_phi))\n",
+    "errPECD_phi = np.sqrt(1/(cos_projthR_phi+cos_projthS_phi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_matrix_phi = [[0 for i in range(72)] for j in range(6)] #i col, j row\n",
+    "\n",
+    "for i in range(72): #fixe because of the photon directions, equal to range(len(cosphi))\n",
+    "    #print(i)\n",
+    "    x_data = ctheta_lin\n",
+    "    y_data = cPECD_phi[i]\n",
+    "    y_err = errPECD_phi[i]\n",
+    "\n",
+    "    lsq = BetterLeastSquares(PECD6, x_data, y_data, y_err)\n",
+    "\n",
+    "    m = Minuit(lsq, errordef=Minuit.LEAST_SQUARES, limit_b1=(-1, 1), limit_b2=(-1, 1), limit_b3=(-1, 1), limit_b4=(-1, 1), limit_b5=(-1, 1), limit_b6=(-1, 1)) # initial values are 0 by default\n",
+    "    m.migrad() # run optimiser\n",
+    "    m.hesse() # run covariance estimator\n",
+    "    for j,p in zip(range(len(m.parameters)),m.parameters): # len = 6\n",
+    "        param_matrix_phi[j][i] = ((m.values[p], m.errors[p]))\n",
+    "\n",
+    "param_matrix_phi=np.array(param_matrix_phi) #numpy tranformation!!!    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#to be compared with the b1 maps of the experimental data AS THEY ARE (not sorted)\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "fig = make_subplots(rows=6, cols=2, vertical_spacing=0.015,\n",
+    "                    subplot_titles=('Without Smoothing', 'With Smoothing'))\n",
+    "\n",
+    "for i in range(len(param_matrix)):\n",
+    "    if i==1 or i==5:\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 2)\n",
+    "    else:\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 2)\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    # coloraxis=dict(colorscale=Seismic_r),\n",
+    "    # showlegend=False,\n",
+    "    autosize=False,\n",
+    "    # width=800,\n",
+    "    height=1500,\n",
+    "    margin=dict(l=0,r=0,b=25,t=25)\n",
+    "    )\n",
+    "\n",
     "fig.show()"
    ]
   },
